grammar.js
        document: $ => repeat(
            choice(
                $.heading,
                $.strong_delimiting_modifier,
                $.non_structural,
            ),
        ),

        _word: $ => prec.right(repeat1($._character)),
        _whitespace: _ => token(/[\t                　]+/),

        escape_sequence: $ => seq(
            "\\",
            alias(/./, $.escape_char),
        ),

        // TODO: Fix `hello ,*world*` failing`
        // TODO: Fix `:*hello*` not printing any bold
        // perhaps do something like `alias(":", $._word)`?
        paragraph_segment: $ => seq(
            choice(
                $._word,
                $.escape_sequence,
                seq(
                    optional(
                        seq(
                            $._word,
                            $.link_modifier,
                        ),
                    ),
                    prec.dynamic(1, $.attached_modifier),
                    optional(
                        seq(
                            $.link_modifier,
                            $._word,
                        ),
                    ),
                ),
            ),
            repeat(
                choice(
                    seq(
                        $._whitespace,
                        choice(
                            $._word,
                            $._whitespace,
                            $.escape_sequence,
                            prec.dynamic(1, $.attached_modifier),
                            $._attached_modifier_conflict,
                            seq(
                                optional(
                                    seq(
                                        $._word,
                                        $.link_modifier,
                                    ),
                                ),
                                prec.dynamic(1, $.attached_modifier),
                                optional(
                                    seq(
                                        $.link_modifier,
                                        $._word,
                                    ),
                                ),
                            ),
                        ),
                    ),
                    choice(
                        $._word,
                        $.escape_sequence,
                        $._attached_modifier_conflict,
                    ),
                ),
            ),
        ),

        paragraph: $ => prec.right(seq(
            $.paragraph_segment,
            repeat(
                seq(
                    newline,
                    $.paragraph_segment,
                ),
            ),
            newline_or_eof,
            // TODO: deal with https://github.com/nvim-neorg/norg-specs/issues/8
        )),

        heading1: $ => heading($, 1),
        quote_item1: $ => nestable_detached_mod($, "quote_item", ">", 1),
        quote_item2: $ => nestable_detached_mod($, "quote_item", ">", 2),
        quote_item3: $ => nestable_detached_mod($, "quote_item", ">", 3),
        quote_item4: $ => nestable_detached_mod($, "quote_item", ">", 4),
        quote_item5: $ => nestable_detached_mod($, "quote_item", ">", 5),
        quote_item6: $ => nestable_detached_mod($, "quote_item", ">", 6),

        quote: $ => prec.right(
            repeat1(
                choice(
                    $.quote_item1,
                    $.quote_item2,
                    $.quote_item3,
                    $.quote_item4,
                    $.quote_item5,
                    $.quote_item6,
                ),
            ),
        ),

        _attached_modifier_conflict: $ => choice(
            $._bold_open,
            $._italic_open,
            $._strikethrough_open,
            $._underline_open,
            $._spoiler_open,
            $._superscript_open,
            $._subscript_open,
            $._inline_comment_open,
            $._inline_math_open,
            $._inline_macro_open,
        ),

        tag_name: $ => seq(
            alias($._word, $.word),
            repeat(
                seq(
                    ".",
                    alias($._word, $.word),
                ),
            ),
        ),

        tag_parameter: $ => prec.right(repeat1(
            choice(
                $._word,
                $.escape_sequence,
            ),
        )),

        tag_parameters: $ => prec.right(seq(
            $.tag_parameter,
            repeat(
                seq(
                    $._whitespace,
                    $.tag_parameter,
                ),
            ),
        )),

        ranged_verbatim_tag: $ => prec.right(seq(
            ...tag($, "@"),
            alias(repeat(
                choice(
                    $._word,
                    $._whitespace,
                    newline,
                ),
            ), $.ranged_verbatim_content),
            seq(
                token("@end"),
                newline_or_eof,
            ),
        )),

        infirm_tag: $ => seq(
            ...tag($, ".")
        ),

        standard_ranged_tag: $ => seq(
            ...tag($, "|"),
            alias(repeat(
                choice(
                    $.heading,
                    $.strong_delimiting_modifier,
                    $.non_structural,
                ),
            ), $.ranged_tag_content),
            seq(
                token("|end"),
                newline_or_eof,
            ),
        ),
