test/corpus/quote.txt
================================================================================
Level 1 Quote
================================================================================
> Quote content
spanning a paragraph

but not further
--------------------------------------------------------------------------------

(document
  (quote
    (quote_item1
      (prefix)
      (paragraph
        (paragraph_segment
          (word)
          (word))
        (paragraph_segment
          (word)
          (word)
          (word)))))
  (paragraph
    (paragraph_segment
      (word)
      (word)
      (word))))

================================================================================
Level 2 Quote
================================================================================
>> Quote content
spanning a paragraph

but not further
--------------------------------------------------------------------------------

(document
  (quote
    (quote_item2
      (prefix)
      (paragraph
        (paragraph_segment
          (word)
          (word))
        (paragraph_segment
          (word)
          (word)
          (word)))))
  (paragraph
    (paragraph_segment
      (word)
      (word)
      (word))))

================================================================================
Level 3 Quote
================================================================================
>>> Quote content
spanning a paragraph

but not further
--------------------------------------------------------------------------------

(document
  (quote
    (quote_item3
      (prefix)
      (paragraph
        (paragraph_segment
          (word)
          (word))
        (paragraph_segment
          (word)
          (word)
          (word)))))
  (paragraph
    (paragraph_segment
      (word)
      (word)
      (word))))

================================================================================
Level 4 Quote
================================================================================
>>>> Quote content
spanning a paragraph

but not further
--------------------------------------------------------------------------------

(document
  (quote
    (quote_item4
      (prefix)
      (paragraph
        (paragraph_segment
          (word)
          (word))
        (paragraph_segment
          (word)
          (word)
          (word)))))
  (paragraph
    (paragraph_segment
      (word)
      (word)
      (word))))

================================================================================
Level 5 Quote
================================================================================
>>>>> Quote content
spanning a paragraph

but not further
--------------------------------------------------------------------------------

(document
  (quote
    (quote_item5
      (prefix)
      (paragraph
        (paragraph_segment
          (word)
          (word))
        (paragraph_segment
          (word)
          (word)
          (word)))))
  (paragraph
    (paragraph_segment
      (word)
      (word)
      (word))))

================================================================================
Level 6 Quote
================================================================================
>>>>>> Quote content
spanning a paragraph

but not further
--------------------------------------------------------------------------------

(document
  (quote
    (quote_item6
      (prefix)
      (paragraph
        (paragraph_segment
          (word)
          (word))
        (paragraph_segment
          (word)
          (word)
          (word)))))
  (paragraph
    (paragraph_segment
      (word)
      (word)
      (word))))

================================================================================
Nested Quote
================================================================================
>> item 2
>>> item 3
>>>> item 4
>> item 2
> item 1
>>>>>> item 6
--------------------------------------------------------------------------------

(document
  (quote
    (quote_item2
      (prefix)
      (paragraph
        (paragraph_segment
          (word)
          (word)))
      (quote_item3
        (prefix)
        (paragraph
          (paragraph_segment
            (word)
            (word)))
        (quote_item4
          (prefix)
          (paragraph
            (paragraph_segment
              (word)
              (word))))))
    (quote_item2
      (prefix)
      (paragraph
        (paragraph_segment
          (word)
          (word))))
    (quote_item1
      (prefix)
      (paragraph
        (paragraph_segment
          (word)
          (word)))
      (quote_item6
        (prefix)
        (paragraph
          (paragraph_segment
            (word)
            (word)))))))

================================================================================
Quote Starting With Level Greater than 1
================================================================================
>>>>> Level 5 Quote
--------------------------------------------------------------------------------

(document
  (quote
    (quote_item5
      (prefix)
      (paragraph
        (paragraph_segment
          (word)
          (word)
          (word))))))
